@@ -8,12 +8,12 @@ AUX file-caching.patch 500 SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f7
 DIST deblob-3.0 102531 SHA256 4c9d98faabc226602891e6eb36634f1c228017bb90f0d3ceaa42d41d4b27df0f SHA512 839e383ea507e99a94cc5d13faffc43c30e01e323189fd821b86cdbf8f63d4cbb33a6163517cc616f6f1149afcb3384b53d375b9a3a3570008f6a08c89340a45 WHIRLPOOL 8578f07e831f28a07d09188ace287e90401d9deb8bd56e39ccdcd2893663ccf303cba58d44e0197b31ddf101ea2b9aff43cd3100defbe109a54ed7f6f86d5665
 DIST deblob-3.1 103909 SHA256 9dcf6f981cb3681f8afab0a4f814aebd6c2f46f8e635d2f35657d8344ef6b30e SHA512 e30b669dd959a7a54ae0bfefc5e62aa99270f9b7e160cfb2b91d35b4c2ebb915e371c85f2fefdb96bfbbdb5027ec3c6d43988015d183e7539b545deb0b573d34 WHIRLPOOL b56e253c35945193b65ab5d38434c6327182bdb5485ca62af95e06b0e63bc21a8809c380e2ca692219c65d37e041d9eaf85dc128d3205bb215124ca463b49df5
 DIST deblob-3.2 107602 SHA256 5db88405af6d51a77d84354afc3b2bdf673b1a5dcff37bb8db4ccbd12d91db20 SHA512 f34b7128adf716c908cbbbfefe72149fcd88b727d27edab43be65d4e6a55112b6d937d5c2bed86454d58781f3766ba4cc6db668cb6174a6039d276499da37cb4 WHIRLPOOL 0922457f7ca413c9d8115182964a7c051560799c4724452f81cb4c0383cf62c45b0364d6e639bd9d2b9000411d8773cabd2e8af99e8b0dc7f7bdc886db432d6d
-DIST deblob-3.3 107222 RMD160 2796d93a1a0e3034af752ac8684f935cfeff024c SHA1 787e17b058a678f54a4f951510206bc8d72c3d5c SHA256 09a4ee54faf7d96a9ca150bfa3a7a2234d589457bac40f03a6e19b5774b1ef5c
+DIST deblob-3.3 107222 SHA256 09a4ee54faf7d96a9ca150bfa3a7a2234d589457bac40f03a6e19b5774b1ef5c SHA512 f459da012a1c0756f59defdad0da502fc0343d6555b4c854fa32e1e8d640d0be31f1ae5f77a594ed6bf7915a543b759b34108d8b6aff0ad67efc273ec0212d67 WHIRLPOOL 44b7f0af3a84d9e65fd845f568d42c7c2f504aecc3a3750d2f6aaea159c791754a3ae7470b646888c418cd0c611a1233be12261d775d673b87ee6d0d7613c943
 DIST deblob-3.4 109026 SHA256 2fca296bccfa7dc25447f36975971597f67730168a9bc4db0853e55347950680 SHA512 7e6263e265dba957e966b76366566c5b318322c33ec60c9f268af1a375271cd1c1232749902832554f93451225bf61c967f314a48c2890984974d30a984d2e01 WHIRLPOOL f3d8d76078b4a372277926d1d4f3d449968acd64e57a5fbe8fc1c3057e8a9893ba1d580418598089977bb808d9a351de04181dd7f73395e99b306ba8d4886160
 DIST deblob-check-3.0 377076 SHA256 72ab3f74cbcde9d453f8a4e30fd6a6339812806fe6dab3b632c1c68b90b0b104 SHA512 c06b3c0e33a00c91247742c6a50a4f85038477b4d89851f33b1f1f49d4b01143268ba8d6f489f77fcd895c7110a7fe2ff831e0afa7fbd3137cb23cebb433ac84 WHIRLPOOL 61f61effbabb37b6e28e5a44737d7e8f5dbbaa20915464972921b47b8814e641bc7088c2d15bcbc93ef815ec9e8db7246e05232e64c0b70850e39f10f4e8fd7d
 DIST deblob-check-3.1 405438 SHA256 77d125ae5466049fb3f1fe39ddb9320b66239de782a348c66133de591049db43 SHA512 6a5763710db1e00a346fe517f329083a676131a289b95860399da82bf4383103e963cf6b2e3d1d12590337f5885bfabb8d7985ed9a47e3619a1f8d87c976f3d1 WHIRLPOOL cb18838ff1f5993f6ce419c52b82d318e7ebf4bd1d7b3809812e441c630c642745add6fe34eb4e530f3535db39320941c20308a7d633328fd1109f54cbc7b301
 DIST deblob-check-3.2 423268 SHA256 9e67dd0885aa8ef356dbc15d487c8dea5a54f74c5b03a5d7946b65ee43f12638 SHA512 3abb9968ef4750fda90e4e2283981fd4691b7f9854244413b31d17bb60382a6d809fec929d8d3f9b52397dd9f9fa26783f4c3a25f3f4115b76ed585ea68e9916 WHIRLPOOL 891c3f809af470d680ae896c843c09612fb5124f2805e03d67b28ec4353bff0bc346ae9f680d900f0f63e681be86a0195f9baab7dcf3b5accfda739b106766fa
-DIST deblob-check-3.3 427140 RMD160 98998624c083205452cdc22df60d60d06b807315 SHA1 61161f84859542cd3bfe8e961fc75bf6f72031f7 SHA256 ed8fab94c7f01d89a3007135a1260553b71fa1d8e0b4e42bdecb3ffbba81b3fd
+DIST deblob-check-3.3 427140 SHA256 ed8fab94c7f01d89a3007135a1260553b71fa1d8e0b4e42bdecb3ffbba81b3fd SHA512 6fa30cd1a384935b68800ac94bee321edec43a42d42a75a727a580b02fec67354ec799671dc23c4d51e73339e0efbf540a98b57a1679ff2a0a3c7bc75522a4a7 WHIRLPOOL b678413a91af672e5d910901777160681977dd5ada8b09901aeaa3e09c976a6ac06602e3fcc55d982f93ab487e9b0b052a58401eaaf968be503546d8012fd1c4
 DIST deblob-check-3.4 448778 SHA256 28ce952c082e765784f9e5b63f5a3a4fb93545e5e788dc94d094c0b3ae8ea3a0 SHA512 f8f47a0adcc1b9a16c155d89d72d91a02d47bdbb3ac3a353be3873dc868fa44451367b7bb3906817d1ca8f51b64c99ce381d2fa3121582b70c7c2efb18dfc579 WHIRLPOOL 37d219204e15e0c81ac43faed93f7a5051735c474efb2b5167117cd463fbe81167267b756e8ce546447a30ad5bac651c943401ed98ec61713e20af89aa4fb957
 DIST genpatches-3.0-18.base.tar.bz2 418620 SHA256 f530f6caae05a06ae04817e4ce3e696154571f219446e20d404addc9208cce79 SHA512 98d1199353c7c5d1b035715f683489f4b3fad7b5b4bac5779bf867ee81f52abd82387251bc5945f1c841728bef5887bdc3f4c684c06d96f4dd482e4ed57ac86b WHIRLPOOL fd8e7a869d03d69ffaa7483ae53a3fc1d0a83cc659048c609c347035dd440395909a8318b1e8741056185dc8e3199f70a71b7d943fcf9b0fd008399ea58d29a2
 DIST genpatches-3.0-18.extras.tar.bz2 17193 SHA256 86c7a9d4ee419f21b63bfa23b52feb9c4b547a1b29498a752620336776aaff91 SHA512 881140d7c2f8a405a6dc99f99e7ca406877410e7fd19ecf04bc8776d9d594688f6f23a9fc473284c6ae78e44d0c825ef39e705eab70c2f3ec7b6b40feba4bd1a WHIRLPOOL f72f0bd1694369f1fa0a1d74a17447421cbcd9f499f658eb500b5a2405824ef4a36748a83d4164d34c5c9eaca85eb1f526f8604e31ceae1e7b32d305e21bd237
@@ -29,6 +29,8 @@ DIST genpatches-3.4-2.base.tar.bz2 53731 SHA256 165de5663fc5f600777744d9614cdfad
 DIST genpatches-3.4-2.extras.tar.bz2 17502 SHA256 2b537431a408445cd1091562755234e840016f26ad63ab3a73812ac7f7e1c8d9 SHA512 29ca4fc4de0c1c87eabb2fa55ae856721ac10a4d70758efa9d90379f0b0b0c9def9cabcb50601a1d128471cf97d891ed0965486c85b4dc06dd9ac4058ed78ce4 WHIRLPOOL de947d2d305d79250922795c094db3d4a90d295d28e819fbf2c1c207ba365bf6cd194eb315935fa52f4b8cd135049d9838aad00cb52e7e4802ebbbd87eea61ab
 DIST genpatches-3.4-3.base.tar.bz2 54926 SHA256 408a51b8ae19f679f359bf2954c3552f8859aab92b93d45c414864ed20da2026 SHA512 17bb05ba48066a4bab4e52e97350e6f9544a7ed6e99accc6eeb5a42c95cf561869d50c541029273a5f01e77485a7e149e2ce79f414d5ef5d64cae8a1a87f1906 WHIRLPOOL 9ccdfd89543f8f8bbd5c9e9c685c3f62c5f1376e536b5316ebd86687711eb1da87fee5dbec9c8aedad4bf281c727ab406f8ba6202a5c15baebed6b6cabf297b8
 DIST genpatches-3.4-3.extras.tar.bz2 17502 SHA256 2b537431a408445cd1091562755234e840016f26ad63ab3a73812ac7f7e1c8d9 SHA512 29ca4fc4de0c1c87eabb2fa55ae856721ac10a4d70758efa9d90379f0b0b0c9def9cabcb50601a1d128471cf97d891ed0965486c85b4dc06dd9ac4058ed78ce4 WHIRLPOOL de947d2d305d79250922795c094db3d4a90d295d28e819fbf2c1c207ba365bf6cd194eb315935fa52f4b8cd135049d9838aad00cb52e7e4802ebbbd87eea61ab
+DIST genpatches-3.4-4.base.tar.bz2 68493 SHA256 df8fb89fe764c4bcb0be658a5e87369aa4f236c7779146a3eaeb2ee8cf044300 SHA512 5f74075a82471d31490aa1a27aff2487cee1a200114624ed89bd15e2061e804419f302b74a85f1924fced1c3a43ecebd266dd26342940d37273e2b2a8e89e544 WHIRLPOOL ea0f4a32b95e797f16314764c79fceb8bf1c60c36052b9d6d82024478f196dc83a3a886de828f83e54fcb5abcb533ea74e32d14b1eba320e03b1c28cdb7c2f98
+DIST genpatches-3.4-4.extras.tar.bz2 17508 SHA256 be8e087b3a0508e88bd36d2d4bec07e0756a3e7f7b31de4dbfd51d79412c2a96 SHA512 f84be04008f254509de7eb05c78fe040fa563038e8ba2744412296a54208c7889417f72ada0db8b21754e2db544fb921b75300728d48337bdc7a7dfa02cdcf26 WHIRLPOOL b0331d32d4ef74fd2357dfc2dc046562828f9bbbbd175412276d79d4097a11a6c91847ba364d8e84ffee361bfd868161951ae740ee232504d1ae4fbb9d87f74e
 DIST linux-3.0.tar.bz2 76753134 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0 SHA512 4a87bba5f62945d226d8c0059d38e6354ad8cd379b8d7936f934a3868a69c6a4c724aad56d974966e8ef1de45f1e0bbe628cb15fc568b6f8cfc63dbc8104bc9d WHIRLPOOL 4bf0a38a623797be81eadaa4b102f9ea1da31edab9aa9e886577bfda79ffd6e105fff702438c2e1350cbb005f9e7594be8e07fe76ad36b1c28ef94184b6edf9f
 DIST linux-3.1.tar.bz2 77190238 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359 SHA512 131b814325d888bb11ba552bc5bdd91ee2d8e139b06ac7ba94e716bcbbcc99ba30867eeea4aab580907916203bc526ae0bccda688151b250ba7943e193e50252 WHIRLPOOL d224dd52c7133e9768817319d0ad0d3797d426180b4d3d936d5189b500521ac4abe4abae7cc71f055d7e5194171f549b6fdb0221ae023cb35b16993741ad1e61
 DIST linux-3.2.tar.bz2 78147838 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463 SHA512 1f57b98e8da34b10f37ce94e0f13a994c111d483b104c27a8f58a4a55013a73a9f1ffcebb597be63ce0dfadb92201e93b0e072ba49bac0033026aceb0840c812 WHIRLPOOL 3dc893bde09f064e4614183964a4b9feaab938ca7a739f46f825818a577884eae815f195b52a4c55c571345de59d7ba09631fb68dac481a0837b24868ce60e3d
@@ -41,13 +43,14 @@ EBUILD lh-sources-3.3.5.ebuild 927 SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e5
 EBUILD lh-sources-3.4.0.ebuild 927 SHA256 d113e4e7ded2c3e886a1d965cf3f1067aac0ec84a0279b5cd3a703029b6fc577 SHA512 de7a52eaeae97540a78ce7dceeaf7caa40ebee7c89abd2bcd5d03bd87392b4ebeeac6c06e0dbda875b493c4d5af66d7001b6ac70585b620bf131726b4a0c2f4c WHIRLPOOL c0b9b4ce7d60b4c92991c51325a79b30d0808c1df1de76d51cca8ffc0b13601b03382bc40724f48e0c23745007d90528da45be753998d75674a4b2c38e212105
 EBUILD lh-sources-3.4.2-r1.ebuild 927 SHA256 61248830d30060260c78b933df128fed2ab6dceb88edd49cfcddf01078eec074 SHA512 355144562aa3d3317ffbf7a190b7fcb3ef0255a2ab7bc037c34c4368df31a25cbb7111ffd347e195748f4ab79bbaff4d0e2bab729979db27793ee411c4577440 WHIRLPOOL f7b115d1dd6631262c153b9ce452a62254d66133b41a7facebf731f0fecce955ed2bd36adef7c6735a6ec8f9301310b881ef366c488cba02fddf2f487a20b502
 EBUILD lh-sources-3.4.2.ebuild 927 SHA256 5453b3a7b227e64c8cfcde1315a08af0a420287a665845a732004c60466c8211 SHA512 e54fb1a02d6e90aa8ff2a8e114e541c39636a8bed6db1bfa1edce517ec101dddee3ad436484528c8286a4884c9c40643fe71e4ef5f5f94ebf7a9a5f2046e13db WHIRLPOOL bb0422dca7b8455237faafb24c1d582bb280ca1e464642480f5e570c9afb00a3e605ee0ce6a990ae83f44221d581d1910ea47434a7e3d8c0212b6443408710c4
-MISC ChangeLog 10352 SHA256 4f0391a4f7a7e90d2a18b8dbe77582874ff45b7bcd9b1d95751f00c4b860bdf5 SHA512 720202cfd829bb5ccb5e4e15505a57ed5b5999a232409dbf265269b45cf0a77aab5a7e7d44841abf240f0249f9bd701ded8632ff7d486701c63b5b5d1fcada2b WHIRLPOOL 358d1bcd3079e8681418bc2d49bd198d5c0424399feea44bb2ce486023deaf988d87c33398de138097dd1673d2437281d9338a4d9430c82aea934e05291e1abf
+EBUILD lh-sources-3.4.3.ebuild 927 SHA256 a70e9d03bdce7dcd52bb47bc811af1b0e424a7e057a723294f01e7471ba0225f SHA512 e3c09409adca8462b574b28005c4852b443eb03bdd21630277316672e853ba8b94234c6cf8a01bb458be86c06c75d36e006ec0aaadda3c19c284e5d45d15a6d7 WHIRLPOOL c4bda91c779c253e860aed474c7b832b21b43e71c3bbeb17057c0ecec4363c86774e4e7561a62b05b06563a9f575302d9b4c54fbbbb603bc54949f6661cd78c5
+MISC ChangeLog 10474 SHA256 cdbee6f849fb7c27ceff5b1e17de3dfae47c7ddaaaea779a2ab64bc0250a87ef SHA512 ea2c1b2203c8ab1bd149d5b65dbf8bf738d46cc7548bd32c48831642a4b73e81024a516230175c20bc9e5c8cdbb64753587213f58e2db5d6425ffda7cb0cc357 WHIRLPOOL 6ad0034faeed84b73ba2aadbe4e1371f77459b8ef156916d4830abba635c252e3ac17a75393b56a86f2a850d6dcc18012c8c15fe782b8c4c4a6e6040346465fc
 MISC metadata.xml 322 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc SHA512 001fce1594b001c9864d86024c45a1560b651e7dda5d81ad8190ea62c88ad48d79867a66cceb2e108e35d6c7d386799d5a3a9d705c8c3beb0c26cdb9b3b94007 WHIRLPOOL 8b233ac46194ab42d98d89be79df6b7f21843923bb9502336a8504a2e5c4de5f3d908de11baf2cf48adf04ab1b16b034707a3d4a1d8746c29bbc9574cd7248cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk/ZiOgACgkQgAnW8HDreRaB3gCfZiyLO2qIkHbh6FN7f1JcWPme
-7cMAn1Ykym3Tb7wuojm9wYz1G6y52f6u
-=VrVE
+iEYEAREKAAYFAk/gxO0ACgkQgAnW8HDreRYATACfQsazmBww5oygZJyDJ8y1MPns
++dgAoLwEymQVsJqHrAIlkR3+aRfOPqu5
+=A4Xg
 -----END PGP SIGNATURE-----
